--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -58,7 +58,7 @@
                 <img src="assets/images/close.svg" *ngIf="showSearch">Seach
             </div>
             <div class="add_feild" (click)="openCreateApp()">
-                <img src="assets/icons/add_plus.svg">Add Field
+                <img src="assets/icons/add_plus.svg">Add Application
             </div>            
         </div>
           </div>
