--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -88,7 +88,7 @@
                     <div class="kr-sg-input-search m-0" [ngClass]="{'active': showSearch}">                               
                         <input type="text" placeholder="Search" autocomplete="off" class="input-search" name='searchSources' placeholder="Search" id="fieldSearchId" [(ngModel)]="serachTraits">           
                       </div> 
-                      <div class="seach-block" (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Seach</div>
+                      <div class="seach-block" (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img *ngIf="showSearch" src="assets/images/close.svg">Search</div>
                     <div class="add_feild" (click)="createNewTraits()"><img src="assets/icons/add_plus.svg"> Create New Trait</div>
                 </div>
                 <header class="table-header">
