--- a/findly-builder/src/app/components/apps-home/apps-home.html
+++ b/findly-builder/src/app/components/apps-home/apps-home.html
@@ -55,7 +55,7 @@
             </div> 
             <div class="seach-block m-0" (click)="toggleSearch()">
                 <img src="assets/icons/search.svg" *ngIf="!showSearch">
-                <img src="assets/images/close.svg" *ngIf="showSearch">Seach
+                <img src="assets/images/close.svg" *ngIf="showSearch">Search
             </div>
             <div class="add_feild" (click)="openCreateApp()">
                 <img src="assets/icons/add_plus.svg">Add Application
