--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -207,60 +207,60 @@
                         <div class="title-card">Top Search Results</div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-5 header-title"><img src="assets/icons/sort_up_down.svg">Searched Intent</div>
-                                <div class="col-2 header-title"><img src="assets/icons/sort_up_down.svg">Appearances</div>
-                                <div class="col-1 header-title"><img src="assets/icons/sort_up_down.svg">Clicks</div>
-                                <div class="col-1 header-title "ngbTooltip='Click-Through Rate'><img src="assets/icons/sort_up_down.svg">CTR</div>
-                                <div class="col-1 header-title"><img src="assets/icons/sort_up_down.svg">Avg Position</div>
-                                <div class="col-1 header-title"><img src="assets/icons/pos-thumb.svg"></div>
-                                <div class="col-1 header-title"><img src="assets/icons/neg-thumb.svg"></div>
+                                <div class="col-6 header-title"><img src="assets/icons/sort_up_down.svg">Searched Intent</div>
+                                <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">Appearances</div>
+                                <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">Clicks</div>
+                                <div class="col-1 header-title text-center" ngbTooltip='Click-Through Rate'><img src="assets/icons/sort_up_down.svg">CTR</div>
+                                <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">Avg Position</div>
+                                <div class="col-1 header-title text-center"><img src="assets/icons/pos-thumb.svg"></div>
+                                <div class="col-1 header-title text-center"><img src="assets/icons/neg-thumb.svg"></div>
                                 <!-- <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">
                                     Count</div> -->
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-5 body-title ">Access to debit account</div>
-                                <div class="col-2 body-title">1200</div>
-                                <div class="col-1 body-title">1000</div>
-                                <div class="col-1 body-title">90%</div>
-                                <div class="col-1 body-title">2.8</div>
-                                <div class="col-1 body-title">1532</div>
-                                <div class="col-1 body-title">347</div>
+                                <div class="col-6 body-title ">Access to debit account</div>
+                                <div class="col-1 body-title text-center">1200</div>
+                                <div class="col-1 body-title text-center">1000</div>
+                                <div class="col-1 body-title text-center">90%</div>
+                                <div class="col-1 body-title text-center">2.8</div>
+                                <div class="col-1 body-title text-center">1532</div>
+                                <div class="col-1 body-title text-center">347</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-5 body-title ">Opening a new account in HDFC</div>
-                                <div class="col-2 body-title">1130</div>
-                                <div class="col-1 body-title">1000</div>
-                                <div class="col-1 body-title">80%</div>
-                                <div class="col-1 body-title">3.8</div>
-                                <div class="col-1 body-title">1632</div>
-                                <div class="col-1 body-title">147</div>
+                                <div class="col-6 body-title ">Opening a new account in HDFC</div>
+                                <div class="col-1 body-title text-center">1130</div>
+                                <div class="col-1 body-title text-center">1000</div>
+                                <div class="col-1 body-title text-center">80%</div>
+                                <div class="col-1 body-title text-center">3.8</div>
+                                <div class="col-1 body-title text-center">1632</div>
+                                <div class="col-1 body-title text-center">147</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-5 body-title">Password change of Saving account</div>
-                                <div class="col-2 body-title">1090</div>
-                                <div class="col-1 body-title">950</div>
-                                <div class="col-1 body-title">70%</div>
-                                <div class="col-1 body-title">2.1</div>
-                                <div class="col-1 body-title">532</div>
-                                <div class="col-1 body-title">47</div>
+                                <div class="col-6 body-title text-center">Password change of Saving account</div>
+                                <div class="col-1 body-title text-center">1090</div>
+                                <div class="col-1 body-title text-center">950</div>
+                                <div class="col-1 body-title text-center">70%</div>
+                                <div class="col-1 body-title text-center">2.1</div>
+                                <div class="col-1 body-title text-center">532</div>
+                                <div class="col-1 body-title text-center">47</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-5 body-title">Opening a new saving account </div>
-                                <div class="col-2 body-title">1140</div>
-                                <div class="col-1 body-title">1300</div>
-                                <div class="col-1 body-title">50%</div>
-                                <div class="col-1 body-title">1.8</div>
-                                <div class="col-1 body-title">143</div>
-                                <div class="col-1 body-title">7</div>
+                                <div class="col-6 body-title">Opening a new saving account </div>
+                                <div class="col-1 body-title text-center">1140</div>
+                                <div class="col-1 body-title text-center">1300</div>
+                                <div class="col-1 body-title text-center">50%</div>
+                                <div class="col-1 body-title text-center">1.8</div>
+                                <div class="col-1 body-title text-center">143</div>
+                                <div class="col-1 body-title text-center">7</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-5 body-title">Changing of Net banking Pin</div>
-                                <div class="col-2 body-title">1004</div>
-                                <div class="col-1 body-title">546</div>
-                                <div class="col-1 body-title">40%</div>
-                                <div class="col-1 body-title">8.8</div>
-                                <div class="col-1 body-title">2532</div>
-                                <div class="col-1 body-title">1347</div>
+                                <div class="col-6 body-title text-center">Changing of Net banking Pin</div>
+                                <div class="col-1 body-title text-center">1004</div>
+                                <div class="col-1 body-title text-center">546</div>
+                                <div class="col-1 body-title text-center" >40%</div>
+                                <div class="col-1 body-title text-center">8.8</div>
+                                <div class="col-1 body-title text-center">2532</div>
+                                <div class="col-1 body-title text-center">1347</div>
                             </div>
                             <!-- 
                            
@@ -337,14 +337,14 @@
                             <div class="content">
                                 <div class="title">New Users <span class="withresults"></span></div>
                                 <div class="count-data">
-                                    <span class="count"><img src="assets/icons/arrow_green.svg">30</span>
+                                    <span class="count"><img src="assets/icons/arrow_green.svg">26</span>
                                     <span class="percentage">+7%</span>
                                 </div>
                             </div>
                             <div class="content">
                                 <div class="title">Repeat Users <span class="clicks"></span></div>
                                 <div class="count-data">
-                                    <span class="count"><img src="assets/icons/arrow_green.svg">50</span>
+                                    <span class="count"><img src="assets/icons/arrow_green.svg">54</span>
                                     <span class="percentage">+3%</span>
                                 </div>
                             </div>
