--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -236,7 +236,7 @@
                                 <div class="col-1 body-title text-center">147</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-6 body-title text-center">Password change of Saving account</div>
+                                <div class="col-6 body-title ">Password change of Saving account</div>
                                 <div class="col-1 body-title text-center">1090</div>
                                 <div class="col-1 body-title text-center">950</div>
                                 <div class="col-1 body-title text-center">70%</div>
@@ -254,7 +254,7 @@
                                 <div class="col-1 body-title text-center">7</div>
                             </div>
                             <div class="table_body row m-0">
-                                <div class="col-6 body-title text-center">Changing of Net banking Pin</div>
+                                <div class="col-6 body-title ">Changing of Net banking Pin</div>
                                 <div class="col-1 body-title text-center">1004</div>
                                 <div class="col-1 body-title text-center">546</div>
                                 <div class="col-1 body-title text-center" >40%</div>
