Sunil changes - METRIC css

--- a/findly-builder/src/app/components/metrics/metrics.component.html
+++ b/findly-builder/src/app/components/metrics/metrics.component.html
@@ -207,8 +207,9 @@
                         <div class="title-card">Top Search Results</div>
                         <div class="table-content-data">
                             <div class="table_header row m-0">
-                                <div class="col-6 header-title"><img src="assets/icons/sort_up_down.svg">Searched Intent</div>
-                                <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">Appearances</div>
+                                <div class="col-5 header-title"><img src="assets/icons/sort_up_down.svg">Searched Intent</div>
+                                <div class="col-1 header-title text-right"><img src="assets/icons/sort_up_down.svg"></div>
+                                <div class="col-1 header-title text-center">Appearances</div>
                                 <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">Clicks</div>
                                 <div class="col-1 header-title text-center" ngbTooltip='Click-Through Rate'><img src="assets/icons/sort_up_down.svg">CTR</div>
                                 <div class="col-1 header-title text-center"><img src="assets/icons/sort_up_down.svg">Avg Position</div>
