Camel case issue

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -24,7 +24,7 @@
                     <input id="selectAllFacets" class="checkbox-custom" type="checkbox" (change)="selectAll()"  [(ngModel)]="selcectionObj.selectAll">
                     <label for="selectAllFacets" class="checkbox-custom-label"></label>
                 </div>
-                <div class="title">FACET Name</div>
+                <div class="title">FACET NAME</div>
             </div>
             <div class="col-3 content">TYPE</div>
             <div class="col-3 content">MULTI SELECT</div>
