--- a/findly-builder/src/app/components/insights/insights.component.html
+++ b/findly-builder/src/app/components/insights/insights.component.html
@@ -1,4 +1,4 @@
-<div class="search-background-div">
+<!-- <div class="search-background-div"> -->
 <div id="advanceContainer" class="dis advanceContainer">
     <div class="row">
         <div class="header col-5">
@@ -126,7 +126,7 @@
      <!-- </perfect-scrollbar> -->
      <!-- <button (click)="btnClick()">button</button> -->
  </div>
-</div>
+<!-- </div> -->
 
 
  <div class ="row" #graphMode *ngIf="graphMode"  (mouseleave) ="mouseLeave()">
