--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -2,6 +2,6 @@
 <div [hidden]="bridgeData">
     <app-insights  [data] = "bridgeData" [query]="query"></app-insights>
 </div> 
-<div [hidden]="true">
-    <app-add-result ></app-add-result>
+<div [hidden]="addNewResult">
+    <app-add-result [addNew] = "addNewResult" (closeResult) = closeResult($event)></app-add-result>
 </div>
