--- a/findly-builder/src/app/components/metrics/metrics.component.scss
+++ b/findly-builder/src/app/components/metrics/metrics.component.scss
@@ -443,3 +443,12 @@
 //         }
 //     }
 // }
+
+
+.pie-chart-graph{
+    width: 180px;
+    height: 180px;
+    margin: 0 auto 28px auto;
+    box-shadow: 0 -4px 18px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 100%;
+}
